# sisepuede

./: .gitignore  pyproject.toml  setup.py
_archive/: define_transformations_afolu.py  define_transformations_circular_economy.py  define_transformations_energy.py  define_transformations_integrated.py  define_transformations_integrated_2.py  define_transformations_ippu.py  model_attributes_old.py  transformations_base_afolu.py  transformations_base_circular_economy.py  transformations_base_cross_sector.py  transformations_base_energy.py  transformations_base_general.py  transformations_base_ippu.py
_archive/transformations_by_sector/: afolu.py  circular_economy.py  energy.py  integrated.py  ippu.py
docs/source/: conf.py  transformers.py
sisepuede/: __init__.py
sisepuede/cloud/: aws_manager.py
sisepuede/command_line/: sisepuede_cl.py
sisepuede/core/: analysis_id.py  attribute_table.py  configuration.py  information_table_properties.py  model_attributes.py  model_variable.py  support_classes.py  units_manager.py
sisepuede/data_management/: ingestion.py  iterative_database.py  lhs_design.py  ordered_direct_product_table.py  sampling_unit.py
sisepuede/geo/: geo_classes.py  geo_functions.py  regional_gridded_data.py
sisepuede/legacy/: data_api.py  data_functions_mix_lndu_transitions_from_inferred_bounds.py  setup_analysis.py
sisepuede/manager/: sisepuede.py  sisepuede_examples.py  sisepuede_experimental_manager.py  sisepuede_file_structure.py  sisepuede_models.py  sisepuede_output_database.py
sisepuede/models/: afolu.py  circular_economy.py  ippu.py  (+3 more)
(+30 files in other folders)
