[project]
name = "sisepuede"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "juliacall>=0.9.24",
    "juliapkg>=0.1.16",
    "matplotlib>=3.10.1",
    "munch>=4.0.0",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydoe2>=1.3.0",
    "pyxlsb>=1.0.10",
    "pyyaml>=6.0.2",
    "qpsolvers>=4.6.0",
    "quadprog>=0.1.13",
    "rioxarray>=0.19.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.ruff.lint]
select = ["ALL"]